[gd_scene load_steps=13 format=3 uid="uid://xyv2fwrbk82e"]

[ext_resource type="Script" path="res://ui/desktop.gd" id="1_ec05d"]
[ext_resource type="Texture2D" uid="uid://d36xin7oghlxn" path="res://assets/image/desktop.png" id="2_fi3u1"]
[ext_resource type="FontFile" uid="uid://c53hg5h4sggrf" path="res://assets/font/m3x6.ttf" id="3_222ki"]
[ext_resource type="Texture2D" uid="uid://dswps1iu1gws1" path="res://assets/image/manual.png" id="4_147d3"]
[ext_resource type="Texture2D" uid="uid://cji2agsyaiiwi" path="res://assets/image/terminal.png" id="5_jsnnj"]
[ext_resource type="Texture2D" uid="uid://cbyxaoorcmv7o" path="res://assets/image/level1.png" id="6_uxwp5"]
[ext_resource type="Texture2D" uid="uid://b4ttkj7bq5wud" path="res://assets/image/level2.png" id="7_1vwla"]
[ext_resource type="Texture2D" uid="uid://dlm4t8qfbnlfg" path="res://assets/image/turn_off.png" id="8_p0ykm"]
[ext_resource type="Texture2D" uid="uid://byrk782rl8ikl" path="res://assets/image/shop.png" id="8_xm6xp"]
[ext_resource type="Shader" path="res://ui/crt.gdshader" id="9_1kqv0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obpy6"]
shader = ExtResource("9_1kqv0")

[sub_resource type="QuadMesh" id="QuadMesh_tc6kc"]
size = Vector2(320, 240)
center_offset = Vector3(160, 120, 0)

[node name="Desktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ec05d")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fi3u1")

[node name="TutorialLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 16.0
offset_right = 73.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("3_222ki")
text = "<- tutorial!!!!!!! :)"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.062
offset_bottom = 0.119999
grow_horizontal = 2
grow_vertical = 2

[node name="Datetime" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_fonts/font = ExtResource("3_222ki")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 16.0
offset_right = -304.0
grow_horizontal = 2
grow_vertical = 2

[node name="ManButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_147d3")

[node name="TerminalApp" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_jsnnj")

[node name="Level1App" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("6_uxwp5")

[node name="Level2App" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("7_1vwla")

[node name="ShopApp" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_xm6xp")

[node name="ReferenceRect" type="ReferenceRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TurnOffButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_p0ykm")

[node name="DesktopArea" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.053
anchor_top = 0.067
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.039999
offset_top = -0.0799999
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MeshInstance2D" type="MeshInstance2D" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_obpy6")
mesh = SubResource("QuadMesh_tc6kc")

[connection signal="pressed" from="VBoxContainer/ManButton" to="." method="_on_man_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TerminalApp" to="." method="_on_terminal_app_pressed"]
[connection signal="pressed" from="VBoxContainer/Level1App" to="." method="_on_level_1_app_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopApp" to="." method="_on_shop_app_pressed"]
[connection signal="pressed" from="VBoxContainer/TurnOffButton" to="." method="_on_turn_off_button_pressed"]
